fixed some layout problems

--- a/src/home/styles.styl
+++ b/src/home/styles.styl
@@ -4,7 +4,6 @@
     justify-content: space-around
 
 .widget
-  min-width: 270px
   cursor: pointer
   transition: all 0.5s
 
